# cardano-crypto

./: .editorconfig  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CARDANO_NODE_ALIGNMENT.md  CHANGELOG.md  CI_CD_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  KEYROLE_IMPLEMENTATION.md  LLM_DOCUMENTATION.md  PARITY_IMPLEMENTATION_PLAN.md  PHASE4_COMPLETION.md  PROJECT_REORGANIZATION.md  PROPERTY_TEST_IMPLEMENTATION.md  PUBLISHING.md  README.md  SECURITY.md  SESSION_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  TYPE_SAFETY.md  VERIFICATION_CHECKLIST.md  WORKFLOW_AUDIT_REPORT.md  WORKFLOW_IMPLEMENTATION_SUMMARY.md  WORKFLOW_IMPROVEMENT_PLAN.md  cliff.toml  deny.toml  justfile  llms-full.txt  llms.txt
.github/: .codecov.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/scripts/: bench.sh  check-api.sh  check.sh  test.sh  validate-workflows.sh
.github/workflows/: ci.yml  dependencies.yml  docs.yml  nightly.yml  performance.yml  publish.yml  security.yml
benches/: AGENTS.md  README.md  dsign_benchmarks.rs  hash_benchmarks.rs  kes_benchmarks.rs  vrf_benchmarks.rs
examples/: AGENTS.md  bls_multisig.rs  dsign_sign_verify.rs  hd_wallet.rs  operational_cert.rs  plutus_crypto.rs  seed_derivation.rs  spo_kes_management.rs  stake_pool_registration.rs
src/: lib.rs
src/bls/: AGENTS.md  mod.rs
src/cbor/: AGENTS.md  mod.rs
src/common/: AGENTS.md  curve.rs  error.rs  mod.rs  security.rs  traits.rs  vrf_constants.rs
src/dsign/: AGENTS.md  ed25519.rs  mod.rs  secp256k1.rs
src/hash/: AGENTS.md  blake2b.rs  mod.rs  sha.rs
src/hd/: AGENTS.md  address.rs  mod.rs
src/kes/: AGENTS.md  hash.rs  mod.rs  test_vectors.rs
src/kes/single/: basic.rs  compact.rs
src/kes/sum/: basic.rs  compact.rs
src/key/: AGENTS.md  bech32.rs  encoding.rs  hash.rs  kes_period.rs  mod.rs  operational_cert.rs  stake_pool.rs  text_envelope.rs
src/seed/: AGENTS.md  mod.rs
src/vrf/: AGENTS.md  draft03.rs  draft13.rs  mod.rs  test_vectors.rs
src/vrf/cardano_compat/: elligator2.rs  fe25519.rs  mod.rs  point.rs  prove.rs  verify.rs
tests/: AGENTS.md  bls12381_conformance_tests.rs  cbor_compat_tests.rs  dsign_compat_tests.rs  edge_case_tests.rs  hash_compat_tests.rs  hd_golden_tests.rs  kes_golden_tests.rs  kes_interop_tests.rs  kes_property_tests.rs  ocert_property_tests.rs  plutus_crypto_tests.rs  plutus_edge_case_tests.rs  secp256k1_conformance_tests.rs  vrf_golden_tests.rs  vrf_property_tests.rs
tests/test_vectors/kes/: README.md
