[package]
name = "cardano-crypto"
version = "1.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["FractionEstate <contact@fraction.estate>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/FractionEstate/cardano-crypto"
documentation = "https://docs.rs/cardano-crypto"
homepage = "https://github.com/FractionEstate/cardano-crypto"
description = "Pure Rust implementation of Cardano cryptographic primitives (VRF, KES, DSIGN, Hash, BLS12-381, secp256k1) with 100% compatibility with cardano-node and Plutus"
keywords = ["cardano", "cryptography", "vrf", "kes", "blockchain"]
categories = ["cryptography", "no-std"]
readme = "README.md"
publish = true
exclude = [
    "/.github",
    "/target",
    "*.profraw",
    "*.profdata",
    "/.vscode",
    "/.pre-commit-config.yaml",
    "/WORKFLOW_IMPROVEMENT_PLAN.md",
    "/WORKFLOW_IMPLEMENTATION_SUMMARY.md",
    "/PHASE4_COMPLETION.md",
    "/TEST_COVERAGE_ANALYSIS.md",
    "/PROPERTY_TEST_IMPLEMENTATION.md",
    "/PROJECT_REORGANIZATION.md",
    "/LLM_DOCUMENTATION.md",
    "/CI_CD_GUIDE.md",
    "/DEPLOYMENT.md",
    "/PUBLISHING.md",
    "/TYPE_SAFETY.md",
    "/CARDANO_NODE_ALIGNMENT.md",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std", "thiserror", "vrf", "kes", "dsign", "hash", "seed", "cbor", "key", "hd"]

# Standard library support
# Note: blst doesn't have std/alloc features - it uses std by default
std = ["alloc", "sha2/std", "zeroize/std", "serde?/std", "bech32?/std", "k256?/std"]
alloc = ["curve25519-dalek/alloc", "zeroize/alloc", "bech32?/alloc", "k256?/alloc"]

# Component features - allows users to enable only what they need
vrf = ["dsign", "hash", "alloc"]
kes = ["dsign", "hash", "alloc"]
dsign = ["hash", "alloc"]
hash = ["alloc"]
cbor = ["alloc"]
seed = ["hash", "alloc"]
key = ["hash"]
hd = ["dsign", "hash", "alloc", "seed"]
bech32-encoding = ["dep:bech32", "alloc", "key"]

# secp256k1 support for Plutus (CIP-0049)
secp256k1 = ["dep:k256", "dsign", "alloc"]

# BLS12-381 support for Plutus V2+ (CIP-0381)
bls = ["dep:blst", "alloc"]

# VRF variants
vrf-draft03 = ["vrf"]
vrf-draft13 = ["vrf"]

# KES variants
kes-single = ["kes"]
kes-sum = ["kes"]
kes-compact = ["kes"]

# Optional features
serde = ["dep:serde"]
metrics = []
logging = []
vrf-debug = ["logging"]
kes-metrics = ["metrics"]

# Full Plutus support (secp256k1 + BLS12-381)
plutus = ["secp256k1", "bls"]

[dependencies]
# Core cryptographic dependencies (required for Cardano compatibility)
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
zeroize = { version = "1.8", default-features = false, features = ["alloc", "derive"] }
thiserror = { version = "2.0", optional = true }

# base64ct: no longer pinned now that MSRV is 1.85+
base64ct = ">=1.0.0"

# Hash functions
blake2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
ripemd = { version = "0.1", default-features = false }
sha3 = { version = "0.10", default-features = false }
subtle = { version = "2.6", default-features = false }

# Serialization (optional)
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
curve25519-elligator2 = { version = "0.1.0-alpha.2", default-features = false, features = ["elligator2", "digest"] }
fiat-crypto = { version = "0.3.0", default-features = false }

# Bech32 encoding (optional, for human-readable key serialization)
bech32 = { version = "0.11", default-features = false, features = ["alloc"], optional = true }

# secp256k1 curve for ECDSA/Schnorr (CIP-0049)
k256 = { version = "0.13", default-features = false, features = ["alloc", "ecdsa", "schnorr"], optional = true }

# BLS12-381 curve (CIP-0381)
blst = { version = "0.3", optional = true }

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "vrf_basic"
required-features = ["vrf"]

[[example]]
name = "kes_lifecycle"
required-features = ["kes"]

[[example]]
name = "dsign_sign_verify"
required-features = ["dsign"]

[[example]]
name = "seed_derivation"
required-features = ["seed", "dsign", "vrf", "kes"]

[[example]]
name = "plutus_crypto"
required-features = ["secp256k1", "bls"]

[[example]]
name = "hd_wallet"
required-features = ["hd"]

[[example]]
name = "bls_multisig"
required-features = ["bls"]

[[example]]
name = "operational_cert"
required-features = ["kes", "dsign", "key"]

[[example]]
name = "stake_pool_registration"
required-features = ["key", "vrf"]

[[example]]
name = "spo_kes_management"
required-features = ["kes", "dsign", "key"]

# ============================================================================
# Build Optimization Profiles
# ============================================================================

[profile.dev]
# Development profile - fast compilation, minimal optimization
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
# Production release profile - maximum optimization
opt-level = 3           # Maximum optimization
debug = false           # No debug info in release
debug-assertions = false
overflow-checks = false
lto = "fat"            # Full Link-Time Optimization for smaller, faster code
panic = 'abort'        # Abort on panic (smaller binary, no unwinding)
incremental = false
codegen-units = 1      # Better optimization, slower compile
strip = true           # Strip symbols for smaller binary

[profile.release-with-debug]
# Release with debug info (for profiling)
inherits = "release"
debug = true
strip = false

[profile.bench]
# Benchmarking profile
inherits = "release"
debug = false
lto = "fat"

[profile.test]
# Test profile - balance between speed and compilation time
inherits = "dev"
opt-level = 1          # Some optimization for faster tests

# Benchmark harnesses
[[bench]]
name = "vrf_benchmarks"
harness = false

[[bench]]
name = "kes_benchmarks"
harness = false

[[bench]]
name = "hash_benchmarks"
harness = false

[[bench]]
name = "dsign_benchmarks"
harness = false
